my-portfolio-website/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Poppins, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  background-color: #171717;
  width: fit-content;
  min-width: initial;
  font-synthesis: none;
  margin: auto;
  align-items: center;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  --primary: #f9f5d7;
  --secondary: black;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.indefinite-rotate {
  animation: spin 5s linear infinite;
}

::-webkit-scrollbar {
  scrollbar-width: thin;
}
::-webkit-scrollbar-track {
  width: 15px;
  background: repeating-linear-gradient(
    45deg,
    var(--secondary),
    var(--secondary) 5px,
    var(--primary) 5px,
    var(--primary) 10px
  );
}

::-webkit-scrollbar-thumb {
  background-color: #171717;
  border-radius: 14px;
  height: 100px;
}

